--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thirumaran-portfolio",
+  "name": "CV_Portfolio",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://dranzercruz.github.io/CV_Portfolio/",
