--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "thirumaran-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://dranzercruz.github.io/CV_Portfolio/",
+  "homepage": "https://eniyvan.github.io/thirumaran-portfolio",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
